--- a/views/pages/addFriend.twig
+++ b/views/pages/addFriend.twig
@@ -25,7 +25,7 @@
 				{% for user in usersCo %}
 					<li class="user-card" data-search="{{ user.userName | lower }}">
 						<div class="user-info">
-							<img src="{{ users.picture }}" alt="Photo de profil" class="profile-pic" onerror="this.src='/../../assets/imgs/Pp.webp'"/>
+							<img src="{{ user.picture }}" alt="Photo de profil" class="profile-pic" onerror="this.src='/../../assets/imgs/Pp.webp'">
 							<div class="user-details">
 								<p class="user-name">{{ user.userName }}</p>
 								<p class="full-name">{{ user.firstName }}
