--- a/public/assets/css/reset-password.css
+++ b/public/assets/css/reset-password.css
@@ -114,6 +114,17 @@ a:hover {
 .modal-content{
     background-color: #1e1e1e;
     border: none;
+    width: 322px;
+    height: 140px;
+    padding: 20px;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#closeErrorModal{
+    margin-top: 20px;
 }
 
 .success-modal {
@@ -143,4 +154,13 @@ a:hover {
     color: white;
     padding: 10px;
     text-align: center;
+}
+
+
+@media (max-width: 768px) {
+    #togglePassword, #toggleConfirmPassword {
+     
+        width: 3.1vw;
+       
+    }
 }
