--- a/public/assets/css/forgot-password.css
+++ b/public/assets/css/forgot-password.css
@@ -89,6 +89,9 @@ a:hover {
     border-radius: 5px;
     width: 300px;
     text-align: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-68%);
 }
 
 button {
