--- a/views/pages/reset-password.twig
+++ b/views/pages/reset-password.twig
@@ -52,6 +52,7 @@ document.getElementById('toggleConfirmPassword').addEventListener('click', () =>
 
     document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
         event.preventDefault(); 
+console.log("jhffjhjhjhuh);
 
         const token = document.getElementById('token').value;
         const newPassword = document.getElementById('newPassword').value;
