--- a/public/assets/css/reset-password.css
+++ b/public/assets/css/reset-password.css
@@ -111,6 +111,10 @@ a:hover {
     color: #80ffe6;
 }
 
+.modal{
+    overflow: visible !important;
+}
+
 .modal-content{
     background-color: #1e1e1e;
     border: none;
