--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -23,6 +23,7 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="icon" href="/../../assets/imgs/LogoBlackRemoveBg.png" type="logoPulse">
+		<link rel="canonical" href="https://pulseconnect.duckdns.org">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue &family=Mogra&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
