--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -19,6 +19,7 @@
 			<ul>
 				<li><a href="/register">S'inscrire</a></li>
 				<li><a href="/login">Se connecter</a></li>
+				<li><a href="/blog">Blog</a></li>
 			</ul>
 		</nav>
 	</div>
