--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -77,6 +77,10 @@ body {
     font-weight: bold;
 }
 
+#nav-menu ul li a:hover {
+    color: aquamarine;
+}   
+
 h1{
     margin-top: 20px;
     font-size: 2.5rem;
@@ -245,16 +249,16 @@ video {
     width: 80%;
     border-radius: 10px;
     margin-top: 10px;
-    object-fit: cover; /* Ajuste sans distorsion */
+    object-fit: cover; 
     border-radius: 10px;
 }
 
 .items video {
     display: block;
-    width: 100%; /* Remplit le conteneur */
-    max-width: 400px; /* Ajuste selon ton design */
-    height: 250px; /* Taille fixe pour uniformiser */
-    object-fit: cover; /* Ajuste le contenu sans distorsion */
+    width: 100%; 
+    max-width: 400px; 
+    height: 250px; 
+    object-fit: cover; 
     border-radius: 10px;
 }
 
