update content for SEO

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -19,7 +19,27 @@
 		<meta name="twitter:player" content="{{ '/uploads/' ~ content.url }} ">
 		<meta name="twitter:player:width" content="1280">
 		<meta name="twitter:player:height" content="720">
-
+		<script type="application/ld+json">
+			{
+			      "@context": "https://schema.org",
+			      "@type": "WebSite",
+			      "name": "PulseConnect",
+			      "url": "https://pulseconnect.duckdns.org/",
+			      "potentialAction": [
+			        {
+			          "@type": "LoginAction",
+			          "target": "https://pulseconnect.duckdns.org/login",
+			          "name": "Connexion"
+			        },
+			        {
+			          "@type": "RegisterAction",
+			          "target": "https://pulseconnect.duckdns.org/register",
+			          "name": "Inscription"
+			        }
+			      ],
+			      "description": "Plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes."
+			    }
+		</script>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="icon" href="/../../assets/imgs/LogoBlackRemoveBg.png" type="logoPulse">
