update content for SEO

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -21,24 +21,35 @@
 		<meta name="twitter:player:height" content="720">
 		<script type="application/ld+json">
 			{
-			      "@context": "https://schema.org",
-			      "@type": "WebSite",
-			      "name": "PulseConnect",
-			      "url": "https://pulseconnect.duckdns.org/",
-			      "potentialAction": [
-			        {
-			          "@type": "LoginAction",
-			          "target": "https://pulseconnect.duckdns.org/login",
-			          "name": "Connexion"
-			        },
-			        {
-			          "@type": "RegisterAction",
-			          "target": "https://pulseconnect.duckdns.org/register",
-			          "name": "Inscription"
-			        }
-			      ],
-			      "description": "Plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes."
-			    }
+						      "@context": "https://schema.org",
+						      "@type": "WebSite",
+						      "name": "PulseConnect",
+						      "url": "https://pulseconnect.duckdns.org/",
+						      "potentialAction": [
+						        {
+						          "@type": "LoginAction",
+						          "target": "https://pulseconnect.duckdns.org/login",
+						          "name": "Connexion"
+						        },
+						        {
+						          "@type": "RegisterAction",
+						          "target": "https://pulseconnect.duckdns.org/register",
+						          "name": "Inscription"
+						        }
+						      ],
+						      "description": "Plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes."
+						    }
+		</script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-WW19TW2856"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+			dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-WW19TW2856');
 		</script>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
