--- a/views/pages/blog.twig
+++ b/views/pages/blog.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title %}
-	<title>{{ title }}</title>
+	<title>{{" À propos "}}</title>
 {% endblock %}
 
 {% block main %}
