update balise meta for SEO

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -15,7 +15,8 @@ gtag('config', 'G-WW19TW2856');
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="{{ content.name }}">
-		<meta property="og:description" content="{{ content.description }}">
+		<meta property="og:description" content="{{"Pulseconnect est une plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes."}}">
+		<meta property="og:url" content="https://pulseconnect.duckdns.org">
 		<meta property="og:image" content="{{ content.thumbnail_url ?: '/assets/imgs/default-thumbnail.jpg' }}">
 		<meta property="og:video" content="{{ '/uploads/' ~ content.url }} ">
 		<meta property="og:video:type" content="video/mp4">
