--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title %}
-	<title>{{title}}</title>
+	<title>{{"PulseConnect"}}</title>
 {% endblock %}
 
 {% block main %}
