--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -14,8 +14,8 @@ gtag('config', 'G-WW19TW2856');
 		</script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="{{ "Pulse Connect" }}">
-		<meta property="og:description" content="{{"Pulseconnect est une plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes."}}">
+		<meta property="og:title" content= "Pulse Connect" >
+		<meta property="og:description" content="Pulseconnect est une plateforme de collaboration musicale. Connectez-vous ou inscrivez-vous pour échanger avec d'autres artistes.">
 		<meta property="og:url" content="https://pulseconnect.duckdns.org">
 		<meta property="og:image" content="{{ content.thumbnail_url ?: '/assets/imgs/default-thumbnail.jpg' }}">
 		<meta property="og:video" content="{{ '/uploads/' ~ content.url }} ">
