--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -91,6 +91,40 @@
 		</div>
 	</section>
 
+	<section id="faq">
+    <h2>FAQ</h2>
+    <div class="faq-container">
+        <div class="faq-item">
+            <button class="faq-question">Qu'est-ce que PulseConnect ?</button>
+            <div class="faq-answer">
+                <p class="response">PulseConnect est une plateforme permettant aux artistes de partager leurs créations musicales et aux utilisateurs de découvrir de nouveaux talents.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">Comment m'inscrire sur PulseConnect ?</button>
+            <div class="faq-answer">
+                <p class="response">Vous pouvez vous inscrire en cliquant sur "S'inscrire" en haut de la page et en remplissant le formulaire d'inscription.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">PulseConnect est-il gratuit ?</button>
+            <div class="faq-answer">
+                <p class="response">Oui, l'inscription et l'utilisation de base de PulseConnect sont gratuites. Cependant, certaines fonctionnalités avancées pourraient être payantes.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">Comment puis-je publier ma musique ?</button>
+            <div class="faq-answer">
+                <p class="response">Une fois connecté, vous pouvez publier vos morceaux en allant dans votre profil et en utilisant "Crée" dans le menu et "Publier du contenu".</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 	<section id="lottieAnimationLeft">
 		<dotlottie-player src="https://lottie.host/bb469ae7-2eea-4a64-98a4-9e382f832e51/0LHzuM66wC.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
 	</section>
