--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -627,4 +627,64 @@ h4{
             transform: translateX(-100%);
         }
     }
+  
+}
+
+#faq {
+    min-width: 80%;
+    max-width: 80%; 
+    margin: 50px auto;
+    padding: 20px;
+    background: #1e1e1e;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#faq h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.faq-item {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+.faq-question {
+    width: 100%;
+    text-align: left;
+    background: none;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
+.faq-answer {
+    display: none;
+    padding: 10px;
+    font-size: 16px;
+    color: #555;
+}
+
+.faq-question::after {
+    content: "▼";
+    font-size: 14px;
+    transition: transform 0.3s;
+}
+
+.response{
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    justify-content: flex-start;
+}
+
+.faq-question.active::after {
+    transform: rotate(180deg);
 }
