--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -6,6 +6,9 @@
     <div class="footer-left">
         <p>&copy; PulseConnect. Tous droits réservés</p>
     </div>
+    
+    <a id="confidential" href="/confidential">Politique de Confidentialité</a>
+    
     <div class="footer-right">
         <a href="https://x.com/PulseConnect13" target="_blank"><img src="/../../assets/imgs/logoX.png" alt=""></a>
         <a href="https://www.facebook.com/share/AWvbkRQcrszVbAWC/?mibextid=LQQJ4d" target="_blank"><img src="/../../assets/imgs/logoFacebook.png" alt=""></a>
