--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -4,7 +4,7 @@
 
 <footer class="footer-container">
     <div class="footer-left">
-        <p>&copy; PulseConnect. Tous droits réservés</p>
+        <p id="copy">&copy; PulseConnect. Tous droits réservés</p>
     </div>
     
     <a id="confidential" href="/confidential">Politique de Confidentialité</a>
