--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -97,28 +97,28 @@
         <div class="faq-item">
             <button class="faq-question">Qu'est-ce que PulseConnect ?</button>
             <div class="faq-answer">
-                <p class="response">PulseConnect est une plateforme permettant aux artistes de partager leurs créations musicales et aux utilisateurs de découvrir de nouveaux talents.</p>
+                <p>PulseConnect est une plateforme permettant aux artistes de partager leurs créations musicales et aux utilisateurs de découvrir de nouveaux talents.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <button class="faq-question">Comment m'inscrire sur PulseConnect ?</button>
             <div class="faq-answer">
-                <p class="response">Vous pouvez vous inscrire en cliquant sur "S'inscrire" en haut de la page et en remplissant le formulaire d'inscription.</p>
+                <p>Vous pouvez vous inscrire en cliquant sur "S'inscrire" en haut de la page et en remplissant le formulaire d'inscription.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <button class="faq-question">PulseConnect est-il gratuit ?</button>
             <div class="faq-answer">
-                <p class="response">Oui, l'inscription et l'utilisation de base de PulseConnect sont gratuites. Cependant, certaines fonctionnalités avancées pourraient être payantes.</p>
+                <p>Oui, l'inscription et l'utilisation de base de PulseConnect sont gratuites. Cependant, certaines fonctionnalités avancées pourraient être payantes.</p>
             </div>
         </div>
 
         <div class="faq-item">
             <button class="faq-question">Comment puis-je publier ma musique ?</button>
             <div class="faq-answer">
-                <p class="response">Une fois connecté, vous pouvez publier vos morceaux en allant dans votre profil et en utilisant "Crée" dans le menu et "Publier du contenu".</p>
+                <p>Une fois connecté, vous pouvez publier vos morceaux en allant dans votre profil et en utilisant "Crée" dans le menu et "Publier du contenu".</p>
             </div>
         </div>
     </div>
