--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -46,4 +46,13 @@
         margin-bottom: 0;
     }
 
+    #confidential {
+        color: white;
+        font-size: 1.1em;
+        text-decoration: none;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+    }
+
 }
