--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,13 +1,11 @@
 .footer-container {
     display: flex !important;
-    justify-content: space-between !important;
-    width: 98% !important;
+    justify-content: space-around !important;
     padding: 10px 20px !important;
+    width: 100% !important;
 }
 
-.footer-left {
-    flex: 1 !important;
-}
+
 
 .footer-right {
     display: flex !important;
@@ -24,10 +22,7 @@
     font-size: 1.1em;
     text-decoration: none;
     transition: color 0.3sease;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-}
+    }
 
 #confidential a:hover {
     color: aquamarine;
@@ -36,6 +31,8 @@
 
 @media (max-width: 769px) {
     .footer-container {
+        text-align: center;
+        justify-content: center !important;
         flex-direction: column !important;
         align-items: center !important;
         gap: 13px;
@@ -50,9 +47,7 @@
         color: white;
         font-size: 1.1em;
         text-decoration: none;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
+       
     }
 
 }
