--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -337,3 +337,36 @@ div {
 .cookie-banner.accepted {
     display: none;
 }
+
+
+
+/* Style de la modal */
+.modal {
+    display: none; /* Cacher la modal par défaut */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+/* Contenu de la modal */
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    margin: 15% auto;
+    width: 50%;
+    border-radius: 5px;
+    position: relative;
+}
+
+/* Bouton de fermeture de la modal */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
